@@ -14,10 +14,10 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.context.request.RequestContextHolder;
 import org.springframework.web.context.request.ServletRequestAttributes;
 
-import java.io.File;
 import java.io.IOException;
 import java.lang.reflect.Method;
 import java.lang.reflect.Parameter;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Arrays;
@@ -41,7 +41,7 @@ public class LoggableAspect {
     ServletRequestAttributes attributes =
         (ServletRequestAttributes) RequestContextHolder.getRequestAttributes();
     if (attributes != null) {
-      Method method = signature.getMethod();
+      var method = signature.getMethod();
       HttpServletRequest request = attributes.getRequest();
       Map<String, String> headersMap = extractHeaders(request, method, joinPoint);
       saveLogToDailyFile(headersMap);
@@ -70,11 +70,11 @@ public class LoggableAspect {
   // Use synchronized to prevent race condition
   private synchronized void saveLogToDailyFile(Map<String, String> headersMap) {
     try {
-      File logFile = createFile(generateFileName());
+      var logFile = createFile(generateFileName());
 
-      StringBuilder content = new StringBuilder();
+      var content = new StringBuilder();
       if (logFile.exists()) {
-        content.append(new String(Files.readAllBytes(logFile.toPath())));
+        content.append(Files.readString(logFile.toPath(), StandardCharsets.UTF_8));
       }
       if (content.isEmpty()) {
         content.append(LoggingConstants.LOG_START);
